styles/Career.module.scss
@import './vaiables.scss';

.career_wrapper {
  .career_bg {
    background-color: $clr-blue-900;
    color: $clr-white;
    padding-top: 1rem;
    padding-bottom: 5rem;
  }
  h1 {
    padding-top: 3rem;
  }
  h2 {
    padding-top: 3rem;
    text-align: center;
    &:after {
      margin: auto;
    }
  }
  .career_card_section {
    min-height: 30rem;
  }
  .career_card_grid {
    display: flex;
    align-items: center;
    // justify-content: center;
    flex-wrap: wrap;
    gap: 1rem;
    padding-top: 3rem;
    padding-bottom: 5rem;
  }
  .career_card_block {
    width: 19rem;
    position: relative;
    padding: 1rem 1.5rem;
    box-shadow: 0 0 13px 2px #eee;
    cursor: pointer;
    &::before {
      content: "";
      width: 4px;
      height: 100%;
      background: $clr-blue-900;
      position: absolute;
      left: 0;
      top: 0;
    }
    h3 {
      font-size: 1rem;
    }
  }
  .no_opening {
    padding: 1rem 1.5rem;
    box-shadow: 0 0 13px 2px #eee;
    outline: 1px solid #b8e5bd;
    border-radius: 4px;
  }
}

@media(max-width: 480px) {
  .career_wrapper {
    .career_card_section {
      .container {
        max-width: 100% !important;
        width: 100% !important;
      }
    }
    .career_card_block {
      width: 22rem;
    }
  }
}

